--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <div align="center">
     <h1>Congratulations!</h1>
-    <h2>A ver si funciona esta vaina.</h2>
+    <h2>No estás detectando cambios?.</h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
   </div>
 </body>
